--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -8,6 +8,9 @@
 "Abc" = "Abc";
 
 /* No comment provided by engineer. */
+"ABOUT" = "ABOUT";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "About Catrobat";
 
 /* No comment provided by engineer. */
@@ -96,6 +99,9 @@
 
 /* No comment provided by engineer. */
 "Animate brick-parts" = "Animate brick-parts";
+
+/* No comment provided by engineer. */
+"APP SETTINGS" = "APP SETTINGS";
 
 /* No comment provided by engineer. */
 "Apr" = "Apr";
@@ -1073,6 +1079,9 @@
 "month" = "month";
 
 /* No comment provided by engineer. */
+"MORE" = "MORE";
+
+/* No comment provided by engineer. */
 "More" = "More";
 
 /* No comment provided by engineer. */
@@ -1392,6 +1401,9 @@
 
 /* No comment provided by engineer. */
 "Previous look" = "Previous look";
+
+/* No comment provided by engineer. */
+"PRIVACY" = "PRIVACY";
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Privacy Settings";
